# workgrid-studio

./: .env  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PRIVACY_POLICY.md  README.md  SECURITY.md  build.bat  build_output.txt  eslint.config.mjs  fetchVariables.js  fetch_heidi.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.agent/rules/: coding-standards.md  workflow-rules.md
.agent/workflows/: add-editor-tab.md  add-tauri-command.md  add-zustand-store.md  commit.md  format-unreleased-changelog.md  issue.md  pr.md
.claude/: settings.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: changelog-on-push.yml  ci.yml  manual-multi-platform-build.yml
.husky/: pre-commit
public/: site.webmanifest
scripts/: changelog.mjs  versioning.mjs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  crypto.rs  db.rs  error.rs  files.rs  lib.rs  logging.rs  main.rs  mssql.rs  pg.rs  sqlite.rs  ssh.rs  state.rs
src-tauri/src/commands/: connection.rs  credentials.rs  crypto.rs  mod.rs  query.rs  schema.rs  tree.rs
src-tauri/src/drivers/: mod.rs  mssql.rs  mysql.rs  postgres.rs  sqlite.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: connection.rs  credentials.rs  crypto.rs  files.rs  mod.rs
src-tauri/src/sql/: mod.rs
src-tauri/src/ssh/: mod.rs
src/app/: App.tsx
src/app/providers/: ThemeProvider.tsx
src/components/icons/: DatabaseTypeIcons.tsx
src/components/layout/: EditorNode.tsx  MenuBar.tsx  Sash.tsx  Workbench.tsx
src/components/ui/: AutocompleteInput.tsx  Button.tsx  Card.tsx  CellContextMenu.tsx  CodeEditorShell.tsx  FindToolbar.tsx  Input.tsx  Skeleton.tsx  SqlAutocomplete.tsx  TabContainer.tsx  ToastContainer.tsx  Tree.tsx  TreeView.tsx
src/components/views/: AiChatSidebar.tsx  CommandPalette.tsx  ConfirmModal.tsx  ContextSubmenu.tsx  CreateDatabaseModal.tsx  DatabaseView.tsx  DbManagerView.tsx  EditDatabaseModal.tsx  EventsView.tsx  ExplainPlanView.tsx  ExplorerTree.tsx  KeyboardShortcutsOverlay.tsx  ModelsPage.tsx  OnboardingFlow.tsx  PrivacyDisclosureModal.tsx  PrivacyPolicyPanel.tsx  QueryBuilderTab.tsx  QueryTab.tsx  ResultsTab.tsx  RoutineView.tsx  SchemaDiagramTab.tsx  ServersSidebar.tsx  SettingsPage.tsx  SnippetsPanel.tsx  TableDataTab.tsx  TableDesigner.tsx  TasksView.tsx  UsersView.tsx  (+3 more)
src/content/: privacyPolicy.ts
src/hooks/: useAppVersion.ts  useCommand.ts  useProfileManager.ts  useStatusBarEntry.ts
src/lib/: appVersion.ts  db.ts  log.ts  output.ts  parseConnectionUrl.ts  privacy.ts  sqlFormat.ts  sqlHighlight.ts  sqlSuggestions.ts  storage.ts
src/state/: README.md  appStore.ts  layoutStore.ts  modelsStore.ts  profilesStore.ts  queryHistoryStore.ts  resultsStore.ts  savedQueriesStore.ts  schemaStore.ts  sessionStore.ts  snippetsStore.ts  tasksStore.ts
src/styles/: globals.css
src/wg/: NOTICES.md  README.md  index.ts  nls.ts
wgs-updater/: AGENTS.md  README.md  package.json  worker-configuration.d.ts  wrangler.jsonc
wgs-updater/src/: index.ts  types.ts
wgs-website/: README.md  index.html  package.json  vite.config.ts  wrangler.jsonc
wgs-website/public/: _headers  robots.txt  site.webmanifest  sitemap.xml
wgs-website/src/: App.tsx  AppRoutes.tsx  AppRoutesSSG.tsx  main.tsx  seo.ts  styles.css
(+311 files in other folders)
