[package]
name = "workgrid-studio"
version = "0.1.6"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "workgrid_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mysql_async = { version = "0.36", default-features = false, features = ["default-rustls"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
keyring = "3"
uuid = { version = "1.22.0", features = ["v4"] }
chrono = "0.4.44"
ssh2 = "0.9"
csv = "1.4.0"
